[gd_scene load_steps=4 format=3 uid="uid://b3kqwck3gr4ms"]

[ext_resource type="Script" uid="uid://clwidibbiblxi" path="res://Scripts/SettingsHandler.gd" id="1_47xox"]
[ext_resource type="Theme" uid="uid://crsn8oneac34e" path="res://Themes/ComputerTheme.tres" id="1_we2iq"]
[ext_resource type="FontFile" uid="uid://dfgo3kpy7k61u" path="res://Fonts/Kenney Pixel.ttf" id="2_kdm8q"]

[node name="Settings" type="Window"]
title = "Settings"
initial_position = 1
size = Vector2i(124, 144)
wrap_controls = true
unresizable = true
theme = ExtResource("1_we2iq")
theme_override_fonts/title_font = ExtResource("2_kdm8q")
theme_override_font_sizes/title_font_size = 32
script = ExtResource("1_47xox")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="MasterLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Master: XX"

[node name="MasterSlider" type="HSlider" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = -50.0
max_value = 20.0

[node name="SFXLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "SFX: XX"

[node name="SFXSlider" type="HSlider" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = -50.0
max_value = 20.0

[node name="AmbienceLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Ambience: XX"

[node name="AmbienceSlider" type="HSlider" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = -50.0
max_value = 20.0

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="value_changed" from="VBoxContainer/MasterSlider" to="." method="VolumeSliderChanged" binds= ["Master"]]
[connection signal="value_changed" from="VBoxContainer/SFXSlider" to="." method="VolumeSliderChanged" binds= ["SFX"]]
[connection signal="value_changed" from="VBoxContainer/AmbienceSlider" to="." method="VolumeSliderChanged" binds= ["Ambience"]]
